2012-11-04 A. Degremont <aurelien.degremont@cea.fr>

	* Worker/Rsh.py: Add a Rsh worker. It is compatible with rsh clones
	like mrsh/krsh. (ticket #216).

2012-09-13 S. Thiell <stephane.thiell@cea.fr>

	* Engine.py: Allow EngineTimer with immediate fire date, that is, a fire
	delay of 0s. Obviously not fired in time, such a timer will still be armed
	and fired as soon as possible (ticket #200).

2012-08-27 S. Thiell <stephane.thiell@cea.fr>

	* Engine.py: Fix catch-all used in case of KeyboardInterrupt exception
	during runloop, resulting in ghost engine clients in that case and results
	possibly not cleaned properly (ticket #199).

2012-08-01 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix clush_exit() side effects thanks to latest task
	termination improvements (tickets #185).

	* Task.py: Avoid termination race condition when using multiple threads
	and calling abort()+join() from another thread (tickets #197).

2012-07-09 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: "All nodes" extended pattern support with @* (ticket #193).

2012-04-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.6 released.

	* doc/guide: Add ClusterShell User and Programming Guide LaTeX source to
	repository.

2012-04-07 S. Thiell <stephane.thiell@cea.fr>

	* doc/examples/check_nodes.py: Add simple example of event-driven script.

2012-03-31 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Allow -a and common nodeset operations when using -l to
	list belonging groups (a new 1.6 feature, see ticket #162).

2012-03-29 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: added documentation for
	worker.current_[node,msg,errmsg,rc] variables (ticket #160).

	* Task.py: timeout parameters better explained (ticket #157).

2012-03-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Add --diff option to enable diff display between
	gathered outputs. Enabled in clush and clubak (ticket #176).

	* CLI/Display.py: Add _print_diff() and flush() methods.
